kubernetes/gateway/resources/gateway.bootstrap.yaml
# in a brand new environment there's a chicken/egg problem getting the gateway created
# - you cant get a functiontal gateway with a TLS listener until you have a cert in a secret
# - you cant have cert-manager create a cert in a secret until you have a functional gateway
#
# the work around is to create an HTTP only gateway, then create the cert, then add the TLS listener afterwards
# so start a new environment with THIS manifest, then get your cert, then apply gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gpotools
spec:
  # this gatewayClass is the incantation for the current gen ALB (not classic)
  # https://docs.cloud.google.com/load-balancing/docs/https#load-balancer-mode
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
      kinds:
      - kind: HTTPRoute
  addresses:
  - type: NamedAddress
    value: gke-ingress-ip
